# MailServiceAPI

./: .env.example  .gitignore  Dockerfile  README.md  ToDo.md  client_test.py  convert.py  docker-compose.yml  fix_templates.py  install_server.sh  pyproject.toml  readme.md  requirements.txt  setup_system.sh  test_imap_append.py  test_sent.py  test_sent2.py  test_sent3.py  translate_login.py  translate_pages.py  update_translations.py
Project/MailService/: .gitignore  readme.md  requirements.txt  setup_system.sh
Project/MailService/app/: main.py
Project/MailService/app/routes/: mail.py  users.py
app/: main.py
app/locales/: de.json  en.json  uk.json
app/routes/: mail.py  ui.py  users.py
app/routes/ui/: __init__.py  auth.py  general.py  mail.py  system.py  utils.py
app/services/: i18n_service.py  imap_service.py  smtp_service.py  system_service.py  time_service.py  user_manager.py
app/templates/: base.html  change_password.html  compose.html  delete_user.html  health.html  inbox.html  index.html  login.html  register.html  users_list.html  view_mail.html
config/dovecot/conf.d/: 10-ssl.conf
config/postfix/: main.cf  master.cf
monitoring/: nginx_mailservice.conf
monitoring/alloy/: config.alloy
monitoring/loki/: loki-config.yml
monitoring/prometheus/: alert.rules.yml  prometheus.yml
tests/: load_test.py  run_all.py
tests/e2e/: config.py  test_users.py
tests/e2e/api/: test_mail.py  test_users.py
tests/e2e/ui/: test_auth_ui.py  test_mail_ui.py  test_system_ui.py
tests/e2e/utils/: auth_helper.py  user_helper.py
(+2 files in other folders)
